--- a/_posts/2020-02-12-p-value.md
+++ b/_posts/2020-02-12-p-value.md
@@ -4,9 +4,11 @@ title: "P-value Interpretation"
 date: 2020-02-12 16:00:00 +0800
 tags: [statistics, machine-learning]
 # img: "/assets/img/machine.jpg"
-description: explore the impact on model with or without cross validation
+description: understand what is P-value and how to interpret it
 ---
+
 ## What is P-value
+
 P-value is the probability of a random generated data, or something else that is equal or rarer.
 It is different from the probability of the event itself.
 
@@ -21,7 +23,9 @@ P-value = 2.35% + 2.35% + 0.15% + 0.15% = 5% = 0.05
 Reference: [a great video on p-value by StatQuest](https://www.youtube.com/watch?v=5Z9OIYA8He8)
 
 ## Interpretation
+
 Now we know how P-value is calcuated, how do we interpret different values?
+
 - P-value(event) = 0.8
   - there's 80% probability of observing the event or something rarer
   - which means it's nothing special about this event
