--- a/_posts/2020-02-11-workflow.md
+++ b/_posts/2020-02-11-workflow.md
@@ -13,15 +13,16 @@ Below are the general steps I learnt from the Machine Learning course, to be upd
 
 - Define problem statement
 - Gather data (eg, data lake, data pipeline)
-- Exploring data
+- Exploring data and gain insights
   - null inspection
   - pair plot (correlation between features)
-  - shape
+  - scatter plot (density view with alpha=0.1)
+  - shape and size
   - data type
 - Data cleansing
-  - fill na
+  - fillna / dropna
   - one-hot loading
-  - etc
+  - imputer
 - Build baseline model, perhaps using linear regression
 - Iterative Process
   - P-value inspection
