--- a/_posts/2020-02-12-r-squared.md
+++ b/_posts/2020-02-12-r-squared.md
@@ -2,7 +2,7 @@
 layout: post
 title: "R-Squared"
 date: 2020-02-12 16:00:00 +0800
-tags: [statistics, machine-learning]
+tags: [statistics, ml-metrics]
 # img: "/assets/img/machine.jpg"
 description: R-squared definition and interpretation
 ---
