--- a/_posts/2020-03-12-quorum.md
+++ b/_posts/2020-03-12-quorum.md
@@ -6,12 +6,7 @@ tags: [distributed-computing]
 # img: "/assets/img/machine.jpg"
 description: why are nodes always odd number?
 ---
-# Outline
-- Quorum 法定人数
-- Motivation
--
-
-# Quorum 法定人数
+# Quorum
 Quorum [general definition](https://dictionary.cambridge.org/dictionary/english/quorum):
 >The smallest number of people needed to be present at a meeting before it can officially begin.
 
