--- a/_posts/2020-03-12-quorum.md
+++ b/_posts/2020-03-12-quorum.md
@@ -10,7 +10,9 @@ description: why are nodes always odd number?
 Quorum [general definition](https://dictionary.cambridge.org/dictionary/english/quorum):
 >The smallest number of people needed to be present at a meeting before it can officially begin.
 
-# What is the motivation?
+# Replication
+In distributed computing, the same data is copied to multiple machines connected via a network.
+
 In a leaderless configuration, which means all requests are sent to all nodes, how can we be sure that the values we read is always **up-to-date**?
 > up-to-date read will return the value of lastest write
 
@@ -20,7 +22,7 @@ A diagram illustrating a write operation, but only 2 out of the 3 nodes acknowle
 
 ![write](/assets/img/W.jpeg)
 
-A diagram illustrating a read operation, similarly only 2 out of the 3 nodes acknowledged.
+A diagram illustrating a read operation, similarly only 2 out of the 3 nodes responded.
 
 ![read](/assets/img/R.jpeg)
 
