--- a/_posts/2020-03-12-quorum.md
+++ b/_posts/2020-03-12-quorum.md
@@ -27,7 +27,7 @@ A diagram illustrating a read operation, similarly only 2 out of the 3 nodes res
 ![read](/assets/img/R.jpeg)
 
 # Quorum in Distributed Computing
-Extend the concept to **distributed computing**, it refers to the small number acknowledgement/response required in a cluster for an operation to be successful, or service to be availabe.
+Extend the concept to **distributed computing**, it refers to the smallest number of acknowledgement/response required in a cluster for an operation to be successful, or service to be availabe.
 
 - Let N be the number of nodes in a cluster
 - Let W be the minimum number of nodes acknowledged WRITE success
