--- a/_posts/2020-03-12-quorum.md
+++ b/_posts/2020-03-12-quorum.md
@@ -31,14 +31,14 @@ Extend the concept to **distributed computing**, it refers to the smallest numbe
 
 - Let N be the number of nodes in a cluster
 - Let W be the minimum number of nodes acknowledged WRITE success
-- Let R be the minimum number of nodes acknowledged READ
+- Let R be the minimum number of nodes responded to READ
 
 Then, when **R + W > N**, we are sure that at least 1 node will return up-to-date reads.
 
 R and W are essentially the **Quorum for Read and Write**
 
-Eg: Let's say we have 3 nodes (A, B, C), so N = 3; let's configure W = R = 2:
-- In the case when A & B acknowledged successful writes, read from any of the 2 nodes (A & B, A & C, B & C) will have at least one that's up-to-date
+Eg: Let's say N = 3, we have 3 nodes (A, B, C), and we configure W = R = 2:
+- during a write request, if we receive acknowledgment from A and B, then a read operation from any of the 2 nodes (A & B, A & C, B & C) will have at least one response that's up-to-date.
 
 # How to choose W and R
 It depends on your application. A better question to ask would be, is the system _read intensive_ or _write intensive_?
