--- a/_posts/2020-03-12-quorum.md
+++ b/_posts/2020-03-12-quorum.md
@@ -48,7 +48,8 @@ In a cluster of 3 nodes, if our system is _read intensive_, we can configure R=1
 In comparison, if our system is _write intensive_, one might consider a configuration with W=1, and R=3.
 
 # Why N is usually odd number?
-Usually a cluster consist of odd number of nodes, 3 or 5 most common. We shall explore the reason behind.
+Usually a cluster consist of odd number of nodes, 3 and 5 are most commonly seen. But why is that so?
+
 If N=4 and we want to have least one node return up-to-date result, we must have R + W >5
 - if we configure R=3 and W=2, we can only loose one node for the system to function as normal. If we loose 2 nodes, then write operations will not be available.
 - if we configure R=W=3, then if we lose 2 nodes, the system will come to a complete halt
