--- a/_posts/2020-03-12-quorum.md
+++ b/_posts/2020-03-12-quorum.md
@@ -51,7 +51,7 @@ Eg: Let's say N = 3, we have 3 nodes (A, B, C), and we configure W = R = 2:
 
 It depends on your application. A better question to ask would be, is the system _read intensive_ or _write intensive_?
 
-In a cluster of 3 nodes, if our system is _read intensive_, we can configure R=1, and W=3. So that, even 2 out of 3 nodes are down, read operations can still function as normal. It also speed up the read. However, W=3 requires all e nodes to acknowledge writes, that means if one node is down, no more writes will be available.
+In a cluster of 3 nodes, if our system is _read intensive_, we can configure R=1, and W=3. So that, even 2 out of 3 nodes are down, read operations can still function as normal. It also speed up the read. However, W=3 requires all the nodes to acknowledge writes, that means if one node is down, no more writes will be available.
 
 In comparison, if our system is _write intensive_, one might consider a configuration with W=1, and R=3.
 
@@ -65,6 +65,6 @@ If N=4 and we want to have least one node return up-to-date result, we must have
 - if we configure R=W=3, and we lose 2 nodes, the system will come to a complete halt. Client can neither read nor write.
 
 In comparison, if N=3, R=W=2, the maximum number of node we can loose is also 1.
-Similarly, a cluster of 5 nodes and 6 allows maximum 2 faulty nodes.
+Similarly, a cluster of 5 nodes and 6 nodes can tolerate maximum 2 faulty nodes.
 
 Generally, if N is odd number, then a cluster of N nodes and N+1 nodes gives the same level of tolerance for faulty node. And thus, a cluster has usually N nodes where N is an odd number. Fewer nodes are easier to maintain and less costly.
